--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.datasource.hikari.maximum-pool-size=4
 spring.main.allow-bean-definition-overriding=true
+FILESTACK_KEY=AhDqzkZ1jR9aLMXnoEicMz
